# owt-ipk

./: .gitignore
fancontrol/: README.md
owt-ctrl/: .gitignore  CMakeLists.txt  README.md  build-release.sh  config.ini  需求与约束.md
owt-ctrl/application/owt-ctrl/: Makefile
owt-ctrl/application/owt-ctrl/files/: README.openwrt  config.ini  owt-ctrl.config
owt-ctrl/docs/: architecture.md  build-and-release.md  change-log-2026-04-10.md  clean-switch-constraints.md  owt-agent-runtime.md  phase0-command-protocol.md  requirements.md  vps-agent-architecture.md
owt-ctrl/frontend/: README.md  index.html  package.json  vite.config.js
owt-ctrl/frontend/src/: App.vue  style.css
owt-ctrl/include/: config.h
owt-ctrl/include/api/: api_common.h  api_holder.h  control_command_push_api.h  host_probe_api.h  host_reboot_api.h  monitoring_get_api.h  params_get_api.h  params_set_api.h
owt-ctrl/include/http_deal/: api_invoke.h
owt-ctrl/include/server/: grpc_control_server.h  listener.h  websocket_session.h
owt-ctrl/include/service/: control_hub.h  ssh_executor.h
owt-ctrl/owt-agent/: CMakeLists.txt  CMakePresets.json  README.md  config.ini
owt-ctrl/owt-agent/application/owt-agent/: CMakeLists.txt  Makefile
owt-ctrl/owt-agent/application/owt-agent/cmake/: owt_agent_build.cmake
owt-ctrl/owt-agent/application/owt-agent/files/: README.openwrt  config.ini  owt-agent.config
owt-ctrl/owt-agent/docs/: README.md  agent-runtime.md
owt-ctrl/owt-agent/include/: config.h  log.h
owt-ctrl/owt-agent/include/common/: string_utils.h
owt-ctrl/owt-agent/include/control/: agent_command_executor_registry.h  agent_runtime.h  agent_runtime_execution_worker.h  agent_runtime_heartbeat_builder.h  agent_runtime_message_router.h  control_protocol.h  default_command_executors.h  default_control_channel_factory.h  grpc_control_channel.h  i_control_channel.h  runtime_event_dispatcher.h  wss_control_channel.h
owt-ctrl/owt-agent/include/control/ports/: defaults.h  interfaces.h  json_mappers.h
owt-ctrl/owt-agent/include/service/: command_store.h  host_probe_agent.h  ssh_stream_reader.h  wakeonlan_sender.h
owt-ctrl/owt-agent/src/core/: config.cpp  host_probe_agent.cpp  log.cpp  main.cpp  params_store.cpp  ssh_executor.cpp  ssh_stream_reader.cpp  wakeonlan_sender.cpp
owt-ctrl/owt-agent/src/core/control/: agent_command_executor_registry.cpp  agent_runtime.cpp  agent_runtime_execution_worker.cpp  agent_runtime_heartbeat_builder.cpp  agent_runtime_message_router.cpp  control_json_codec.cpp  control_protocol.cpp  default_command_executors.cpp  default_control_channel_factory.cpp  runtime_event_dispatcher.cpp  wss_control_channel.cpp
owt-ctrl/owt-agent/tests/: agent_protocol_tests.cpp  agent_runtime_tests.cpp  log_safety_tests.cpp  ssh_stream_reader_tests.cpp
owt-ctrl/owt-agent/tests/scripts/: no_file_write_runtime_check.sh  no_file_write_static_check.sh
owt-ctrl/owt-agent/tools/: diagnose-agent-control-channel.sh
owt-ctrl/owt-net/: CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  config.ini  params.ini
owt-ctrl/owt-net/application/owt-ctrl/files/: owt-ctrl.init
owt-ctrl/owt-net/deploy/deb/: build-deb.sh  conffiles  postinst  postrm  prerm
owt-ctrl/owt-net/deploy/nginx/: google-allowed-emails.example.txt  oauth2-proxy-google.example.cfg  owt-net.conf
owt-ctrl/owt-net/deploy/systemd/: oauth2-proxy.service.example  owt-net.service
owt-ctrl/owt-net/docs/: README.md
owt-ctrl/owt-net/frontend/: package-lock.json  package.json  vite.config.js
owt-ctrl/owt-net/frontend/src/: App.vue  monitoring-state.js  style.css
owt-ctrl/owt-net/frontend/src/components/: AgentPanel.vue  CommandPanel.vue  ParamsPanel.vue
owt-ctrl/owt-net/frontend/src/composables/: useCommandBusSocket.js  useRpcSocket.js
owt-ctrl/owt-net/frontend/tests/: command-event-running.test.mjs  command-submit-single-send.test.mjs  monitoring-state.test.mjs  v4-contract.test.mjs  v5-contract.test.mjs
owt-ctrl/owt-net/include/: config.h  log.h  utils.h
owt-ctrl/owt-net/include/api/: api_holder.h  control_agent_get_api.h  control_agents_get_api.h  control_audit_get_api.h  control_command_get_api.h  control_commands_get_api.h  host_poweroff_api.h  monitoring_set_api.h  wol_wake_api.h
owt-ctrl/owt-net/include/app/: config.h  runtime.h  runtime_log.h  runtime_log_impl.h
owt-ctrl/owt-net/include/control/: control_json_codec.h  control_protocol.h  grpc_codec.h
owt-ctrl/owt-net/include/http_deal/: api_base.h  api_factory.h  api_invoke.h  api_invoke_options.h  http_request_handler.h  response.h
owt-ctrl/owt-net/include/server/: controller.h  http_session.h  websocket_session.h  websocket_session_observer.h  websocket_session_observer_factory.h
owt-ctrl/owt-net/include/service/: auth.h  command_retry_scheduler.h  command_store.h  control_hub.h  control_ws_session_observer.h  frontend_status_stream.h  frontend_status_ws_session_observer.h  host_probe_agent.h  observability.h  rate_limiter.h  sensitive_json.h
owt-ctrl/owt-net/src/api/: control_agent_get_api.cpp  control_agents_get_api.cpp  control_audit_get_api.cpp  control_command_get_api.cpp  control_command_push_api.cpp  control_commands_get_api.cpp  monitoring_api.cpp  wol_wake_api.cpp
owt-ctrl/owt-net/src/app/: config.cpp  main.cpp  runtime.cpp
owt-ctrl/owt-net/src/core/: command_retry_scheduler.cpp  command_store.cpp  config.cpp  control_hub.cpp  control_ws_session_observer.cpp  frontend_status_stream.cpp  frontend_status_ws_session_observer.cpp  log.cpp  main.cpp  observability.cpp  params_store.cpp  rate_limiter.cpp  sensitive_json.cpp  websocket_session_observer_factory.cpp
owt-ctrl/owt-net/tests/: ctrl_tests.cpp  owt_net_tests.cpp  ws_scheduler_stress.cpp
owt-ctrl/owt-net/tools/: diagnose-agent-offline.sh
owt-ctrl/src/api/: control_command_get_api.cpp  control_command_push_api.cpp  host_control_api.cpp  host_probe_api.cpp  params_api.cpp
owt-ctrl/src/core/: command_store.cpp  config.cpp  grpc_control_server.cpp  log.cpp  main.cpp  params_store.cpp  utils.cpp
owt-ctrl/src/core/control/: control_json_codec.cpp  grpc_codec.cpp
(+192 files in other folders)
